--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "url-loader": "^4.1.1",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
-  }
+  },
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ]
 }
